Iteracion II: Fechas Competitivas (App-Infra-Domain)